--- a/src/components/date_picker/_date_picker.scss
+++ b/src/components/date_picker/_date_picker.scss
@@ -9,7 +9,7 @@
 ** then in any way.
 **
 ** Similarly, you will also find several times where we use display: none to
-** completely remove extranous UI (they had some overly obvious legends for example).
+** completely remove extraneous UI (they had some overly obvious legends for example).
 */
 
 
