--- a/src/components/form/file_picker/_file_picker.scss
+++ b/src/components/form/file_picker/_file_picker.scss
@@ -11,7 +11,7 @@
   }
 }
 
-// The input is an invisiable dropzone / button
+// The input is an invisible dropzone / button
 .euiFilePicker__input {
   position: absolute;
   left: 0;
