--- a/src/components/form/text_area/_text_area.scss
+++ b/src/components/form/text_area/_text_area.scss
@@ -17,7 +17,7 @@ $textareaResizing: (
   none: 'resizeNone',
 );
 
-// Create button modifiders based upon the map.
+// Create button modifiers based upon the map.
 @each $direction, $modifier in $textareaResizing {
   .euiTextArea--#{$modifier} {
     resize: #{$direction};
