--- a/src/components/progress/_progress.scss
+++ b/src/components/progress/_progress.scss
@@ -1,4 +1,4 @@
-// This file uses uncommon vender prefixes not covered by our compiliers
+// This file uses uncommon vendor prefixes not covered by our compilers
 // sass-lint:disable no-vendor-prefixes
 
 .euiProgress {
