--- a/src/components/toast/_toast.scss
+++ b/src/components/toast/_toast.scss
@@ -55,7 +55,7 @@ $euiToastTypes: (
   danger: makeGraphicContrastColor($euiColorDanger, $euiColorEmptyShade),
 );
 
-// Create button modifiders based upon the map.
+// Create button modifiers based upon the map.
 @each $name, $color in $euiToastTypes {
   .euiToast--#{$name} {
     border-top: 2px solid $color;
