--- a/src/global_styling/reset/_reset.scss
+++ b/src/global_styling/reset/_reset.scss
@@ -1,4 +1,4 @@
-// This file allows mutli-line selectors to make it more readible
+// This file allows multi-line selectors to make it more readable
 // sass-lint:disable single-line-per-selector
 
 /**
