--- a/src/global_styling/variables/_header.scss
+++ b/src/global_styling/variables/_header.scss
@@ -1,4 +1,4 @@
-// Themable colors
+// Themeable colors
 $euiHeaderBackgroundColor: $euiColorEmptyShade !default;
 $euiHeaderBorderColor: $euiBorderColor !default;
 $euiHeaderBreadcrumbColor: $euiColorDarkestShade !default;
