--- a/src/global_styling/variables/_typography.scss
+++ b/src/global_styling/variables/_typography.scss
@@ -1,5 +1,5 @@
-// Some mixins that help us deal with browser scaling of text more consistantly.
-// Essentially, fonts across eui should scale agains the root html element, not
+// Some mixins that help us deal with browser scaling of text more consistently.
+// Essentially, fonts across eui should scale against the root html element, not
 // against parent inheritance.
 
 // Typography mixins
