--- a/src/components/avatar/_avatar.scss
+++ b/src/components/avatar/_avatar.scss
@@ -5,7 +5,7 @@
   text-align: center;
   vertical-align: middle;
   overflow-x: hidden;
-  font-weight: $euiFontWeightMedium; // Explicitly state so it doesn't get overridden by inheritence
+  font-weight: $euiFontWeightMedium; // Explicitly state so it doesn't get overridden by inheritance
 }
 
 .euiAvatar--user {
