--- a/src/components/color_picker/_hue.scss
+++ b/src/components/color_picker/_hue.scss
@@ -1,4 +1,4 @@
-// This wraps the range. It is needed because there is no way to do a linear gradeint in ie11 for the track
+// This wraps the range. It is needed because there is no way to do a linear gradient in ie11 for the track
 .euiHue {
   // sass-lint:disable-block no-color-literals
   background: linear-gradient(to right,
@@ -41,10 +41,10 @@
   position: relative;
   height: $euiSizeL;
   width: calc(100% + 2px); // Allow for overlap
-  margin: 0 -1px; // Use ^ overlap to allow thumb to fully cover grandient ends
+  margin: 0 -1px; // Use ^ overlap to allow thumb to fully cover gradient ends
   appearance: none;
   background: transparent;
-  z-index: 2; // Needed to place the thumb above the :after pseduo border from .euiRange
+  z-index: 2; // Needed to place the thumb above the :after pseudo border from .euiRange
 
 
   // Resets for the range
