--- a/src/components/form/field_password/_field_password.scss
+++ b/src/components/form/field_password/_field_password.scss
@@ -9,7 +9,7 @@
 }
 
 // sass-lint:disable-block no-vendor-prefixes
-// Only remove Edge's inernal reveal button if we're providing a custom one
+// Only remove Edge's internal reveal button if we're providing a custom one
 .euiFieldPassword--withToggle::-ms-reveal {
   display: none;
 }
