--- a/src/components/form/form_row/_form_row.scss
+++ b/src/components/form/form_row/_form_row.scss
@@ -19,7 +19,7 @@
 
 .euiFormRow--hasEmptyLabelSpace {
   margin-top: ($euiFontSizeXS * $euiLineHeight) + $euiSizeXS; /* 2 */
-  // the following ensure that contents that aren't inheritly the same height
+  // the following ensure that contents that aren't inherently the same height
   // as inputs will align to the vertical center
   min-height: $euiFormControlHeight;
   padding-bottom: 0;
