--- a/src/components/nav_drawer/_nav_drawer_group.scss
+++ b/src/components/nav_drawer/_nav_drawer_group.scss
@@ -28,7 +28,7 @@
   text-align: center;
   vertical-align: middle;
   overflow: visible;
-  font-weight: $euiFontWeightMedium; // Explicitly state so it doesn't get overridden by inheritence
+  font-weight: $euiFontWeightMedium; // Explicitly state so it doesn't get overridden by inheritance
   border-radius: 50%;
 
   &:after {
