--- a/src/global_styling/mixins/_shadow.scss
+++ b/src/global_styling/mixins/_shadow.scss
@@ -1,5 +1,5 @@
 // This file uses RGBA literal values responsibly
-// This file uses off-pattern indedentation to be more readible
+// This file uses off-pattern indentation to be more readable
 
 // sass-lint:disable no-color-literals, no-color-keywords, indentation, quotes
 
@@ -20,7 +20,7 @@
     0 2px 2px 0 rgba($color, $opacity);
 }
 
-// Similar to shadow medium but wihtout the bottom depth. Useful for popovers
+// Similar to shadow medium but without the bottom depth. Useful for popovers
 // that drop UP rather than DOWN.
 @mixin euiBottomShadowFlat($color: $euiShadowColor, $opacity: .2) {
   box-shadow:
