--- a/src/global_styling/mixins/_states.scss
+++ b/src/global_styling/mixins/_states.scss
@@ -1,6 +1,6 @@
 @mixin euiFocusRing($size: 'small') {
   @if $size == 'large' {
-    // It's always OK to use the focus animation. This will take precendence over times we turn it off individually like EuiButtonEmpty
+    // It's always OK to use the focus animation. This will take precedence over times we turn it off individually like EuiButtonEmpty
     // sass-lint:disable-block no-important
     animation: $euiAnimSpeedSlow $euiAnimSlightResistance 1 normal forwards focusRingAnimateLarge !important;
   } @else {
