--- a/src/global_styling/variables/_z_index.scss
+++ b/src/global_styling/variables/_z_index.scss
@@ -1,13 +1,13 @@
 // Z-Index
 
 // Remember that z-index is relative to parent and based on the stacking context.
-// z-indexs only compete against other z-indexs when they exist as children of
+// z-indexes only compete against other z-indexes when they exist as children of
 // that shared parent.
 
 // That means a popover with a settings of 2, will still show above a modal
 // with a setting of 100, if it is within that modal and not besides it.
 
-// Generaly that means it's a good idea to consider things added to this file
+// Generally that means it's a good idea to consider things added to this file
 // as competitive only as siblings.
 
 // https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Positioning/Understanding_z_index/The_stacking_context
