Updates form controls to use the Amsterdam border radius. (#3741)
* Updates form controls to use the Amsterdam border radius.

* Removing variable file. It wasn't needed.

* Remove unused mixins from overrides

* Bunch more conditions for complex controls.

* Addressing some pre/append cases.

* Addressing checkboxes and filepickers.

* Fixes for compressed forms.

* Replaces some border radius variables with the right ones.

* Addressing review comments.

* Fixing a few more inputs and creating a few more variables

* CL

Co-authored-by: cchaos <caroline.horn@elastic.co>

--- a/src/components/form/file_picker/_file_picker.scss
+++ b/src/components/form/file_picker/_file_picker.scss
@@ -7,7 +7,13 @@
   position: relative;
 
   &.euiFilePicker--large {
+    border-radius: $euiFormControlBorderRadius;
+    overflow: hidden;
     height: auto;
+  }
+
+  &.euiFilePicker--large.euiFilePicker--compressed {
+    border-radius: $euiFormControlCompressedBorderRadius;
   }
 }
 
@@ -65,6 +71,7 @@
   padding-right: $euiFormControlPadding;
   padding-bottom: $euiFormControlPadding;
   pointer-events: none; /* 1 */
+  border-radius: $euiFormControlBorderRadius;
 
   // sass-lint:disable-block indentation
   transition:
@@ -77,6 +84,7 @@
     @include euiFormControlStyleCompressed($includeStates: false);
     @include euiFormControlWithIcon($compressed: true); /* 2 */
     height: $euiFormControlCompressedHeight;
+    border-radius: $euiFormControlCompressedBorderRadius;
   }
 
   .euiFilePicker--large & {
