--- a/src/themes/eui-amsterdam/global_styling/variables/_index.scss
+++ b/src/themes/eui-amsterdam/global_styling/variables/_index.scss
@@ -4,6 +4,7 @@
 @import 'buttons';
 @import 'borders';
 @import 'flyout';
+@import 'form';
 @import 'header';
 @import 'typography';
 @import 'shadows';
