--- a/src/components/date_picker/super_date_picker/_super_date_picker.scss
+++ b/src/components/date_picker/super_date_picker/_super_date_picker.scss
@@ -26,6 +26,7 @@
     > .euiDatePickerRange {
       max-width: none;
       width: auto;
+      border-radius: 0 $euiFormControlBorderRadius $euiFormControlBorderRadius 0;
     }
   }
 }
