--- a/src/themes/eui-amsterdam/overrides/_index.scss
+++ b/src/themes/eui-amsterdam/overrides/_index.scss
@@ -12,4 +12,5 @@
 @import 'popover';
 @import 'progress';
 @import 'text';
-
+@import 'form_control_layout';
+@import 'form_control_layout_delimited';
