Updates to EuiSelectableTemplateSitewide and some other fixes for the new header (#4008)
* Fix colors of search in dark header
* Allow consumers to override the color of header links
* Added `popoverButton` and `popoverButtonBreakpoints`
* [Breaking] EuiHide/ShowFor will now render or not render instead of relying on classes
* [EuiHeaderSectionItemButton] Allowing `notification` to be `true` to simply display a dot icon
* Fixing title and search input border-radius in dark header
* Fix bottom bar z-index

--- a/src/components/header/_mixins.scss
+++ b/src/components/header/_mixins.scss
@@ -31,7 +31,11 @@
   }
 
   .euiHeaderNotification,
-  .euiHeaderSectionItemButton__notification {
+  .euiHeaderSectionItemButton__notification--badge {
     box-shadow: 0 0 0 1px $backgroundColor;
+  }
+
+  .euiHeaderSectionItemButton__notification--dot {
+    stroke: $backgroundColor;
   }
 }
