--- a/src/components/header/header_section/_header_section_item.scss
+++ b/src/components/header/header_section/_header_section_item.scss
@@ -16,6 +16,7 @@
 }
 
 .euiHeaderSectionItem__button {
+  position: relative; // For positioning the notification
   height: $euiHeaderChildSize;
   min-width: $euiHeaderChildSize;
   text-align: center;
@@ -51,9 +52,18 @@
 .euiHeaderNotification,
 .euiHeaderSectionItemButton__notification {
   position: absolute;
+}
+
+.euiHeaderSectionItemButton__notification--badge {
   top: 9%;
   right: 9%;
   box-shadow: 0 0 0 1px $euiHeaderBackgroundColor;
+}
+
+.euiHeaderSectionItemButton__notification--dot {
+  top: 0;
+  right: 0;
+  stroke: $euiHeaderBackgroundColor;
 }
 
 @include euiBreakpoint('xs') {
@@ -71,12 +81,18 @@
 
   // On small screens just show a small dot indicating there are notifications
   .euiHeaderNotification,
-  .euiHeaderSectionItemButton__notification {
+  .euiHeaderSectionItemButton__notification--badge {
     @include size($euiSizeS);
     top: 20%;
     min-width: 0;
     border-radius: $euiSizeS;
     color: $euiColorAccent;
     overflow: hidden;
+  }
+
+  // Using specificty to override the default icon size
+  .euiHeaderSectionItemButton__notification.euiHeaderSectionItemButton__notification--dot {
+    @include size($euiSize);
+    top: 9%;
   }
 }
