--- a/src/components/selectable/selectable_templates/_selectable_template_sitewide.scss
+++ b/src/components/selectable/selectable_templates/_selectable_template_sitewide.scss
@@ -2,18 +2,29 @@
 // These selectors aren't targetable via EuiFieldSearch
 .euiHeader--dark .euiSelectableTemplateSitewide .euiFormControlLayout {
   background-color: transparent;
-  box-shadow: inset 0 0 0 1px transparentize($euiColorGhost, .7);
+
+  &--group,
+  input {
+    box-shadow: inset 0 0 0 1px transparentize($euiColorGhost, .7);
+  }
 
   &:not(:focus-within) {
     color: transparentize($euiColorGhost, .3);
+
+    input {
+      // Increase contrast of placeholder text
+      @include euiPlaceholderPerBrowser {
+        color: transparentize($euiColorGhost, .6);
+      }
+
+      // Inherit color from form control layout
+      color: inherit;
+      background-color: transparent;
+    }
 
     .euiFormControlLayout__append {
       background-color: transparent;
       color: inherit;
     }
-  }
-
-  input:not(:focus) {
-    background-color: transparent;
   }
 }
