--- a/src/themes/eui-amsterdam/overrides/_header.scss
+++ b/src/themes/eui-amsterdam/overrides/_header.scss
@@ -13,7 +13,7 @@
 
 .euiHeaderLogo {
   @include euiBreakpoint('xs') {
-    padding: 0 $euiSizeXS;
+    padding-left: $euiSizeXS;
   }
 
   padding-left: $euiSizeS;
