--- a/src/components/bottom_bar/_bottom_bar.scss
+++ b/src/components/bottom_bar/_bottom_bar.scss
@@ -7,7 +7,7 @@
   right: 0;
   left: 0;
   animation: euiBottomBarAppear $euiAnimSpeedSlow $euiAnimSlightResistance;
-  z-index: $euiZNavigation;
+  z-index: $euiZHeader - 2;
 
   &.euiBottomBar--paddingSmall {
     padding: $euiSizeS;
