[EuiDataGrid] Add footer row (#3770)
* Add footer_row into data_grid

* Add documentation description

* Update snapshots

* Revert changes in control_columns example

* Get rid of footerCellRender prop in a column

* Fix review comments

* Update styling example

* Make footer cell expandable

* Move callback outside of the component

* make footer row sticky and adjust styles

* added bg to shaded footer and remove unneeded line from example

* add cl

* made sticky footer optional

* Return back webpack devtool

* small clean up in footer row example & changelog entry

Co-authored-by: Chandler Prall <chandler.prall@gmail.com>
Co-authored-by: Andrea Del Rio <delrio.andre@gmail.com>

--- a/src/components/datagrid/_mixins.scss
+++ b/src/components/datagrid/_mixins.scss
@@ -13,9 +13,12 @@ $euiDataGridStyles: (
   'rowHoverHighlight'
   'headerShade'
   'headerUnderline'
+  'footerShade'
+  'footerOverline'
   'fontSizeSmall'
   'fontSizeLarge'
   'noControls'
+  'stickyFooter'
 );
 
 // All this does is take some of the above and make a sibling selector
@@ -49,6 +52,12 @@ $euiDataGridStyles: (
 
 @mixin euiDataGridRowCell {
   .euiDataGridRowCell {
+    @content;
+  }
+}
+
+@mixin euiDataGridFooterCell {
+  .euiDataGridRowCell.euiDataGridFooterCell {
     @content;
   }
 }
