--- a/src/components/datagrid/_data_grid.scss
+++ b/src/components/datagrid/_data_grid.scss
@@ -97,7 +97,7 @@
 .euiDataGrid__overflow {
   overflow-y: hidden;
   height: 100%;
-  background: $euiPageBackgroundColor;
+  background: $euiColorEmptyShade;
 }
 
 // This is used to remove extra scrollbars on the body when fullscreen is enabled
