--- a/src/components/datagrid/_index.scss
+++ b/src/components/datagrid/_index.scss
@@ -2,6 +2,7 @@
 @import 'mixins';
 @import 'data_grid';
 @import 'data_grid_header_row';
+@import 'data_grid_footer_row';
 @import 'data_grid_column_resizer';
 @import 'data_grid_data_row';
 @import 'data_grid_column_selector';
