[DATA GRID] Add Column header menu (#3087)
Co-authored-by: Chandler Prall <chandler.prall@gmail.com>
Co-authored-by: Matthias Wilhelm <matthias.wilhelm@elastic.co>
Co-authored-by: Andrea Del Rio <delrio.andre@gmail.com>

--- a/src/components/datagrid/_data_grid_data_row.scss
+++ b/src/components/datagrid/_data_grid_data_row.scss
@@ -30,11 +30,8 @@
   }
 
   &:focus {
-    border: 1px solid transparent;
+    @include euiDataGridCellFocus;
     margin-top: -1px;
-    box-shadow: 0 0 0 2px $euiFocusRingColor;
-    border-radius: 1px;
-    z-index: 2; // Needed so it sits above potential striping in the next row
 
     .euiDataGridRowCell__expandButton {
       margin-left: $euiDataGridCellPaddingM;
