[EuiHeaderLinks] Providing more flexibility in display (#4046)
* [EuiHeaderLinks] Adding `gutterSize` flexibility
* [EuiHeaderLinks] Fix spacing and extend popover props
* Removing `#` from `hrefs` in examples
* [EuiPopover] Fix `container` from being passed to DOM as attribute
* Fixing up all the header examples
  - No importing of external doc examples
  - All Elastic logos
  - Remove all actual links that might send the user to the index page
  - Only the first example shows all the popovers
  - The Full screen demo has the rest
* [EuiHide/ShowFor] Add `all` and `none` options for sizes
  - Then update `popoverBreakpoints` prop in EuiHeaderLinks to also allow for `all` and `none`.
* Fixing all popover scrolls in fixed examples

--- a/src/components/header/header_links/_header_links.scss
+++ b/src/components/header/header_links/_header_links.scss
@@ -1,40 +1,16 @@
 .euiHeaderLinks {
   display: flex;
-  justify-content: space-between;
-  position: relative;
 }
 
 .euiHeaderLinks__list {
   white-space: nowrap;
-  overflow: hidden;
   display: flex;
   align-items: center;
+}
 
-  > * {
+@each $name, $gutterSize in $euiHeaderLinksGutterSizes {
+  .euiHeaderLinks__list--#{$name} > * {
     // Apply margins to any children
-    margin: 0 $euiSizeS;
-  }
-}
-
-.euiHeaderLinks__mobile {
-  // sass-lint:disable-block no-important
-  display: none !important; // override popover inline-block
-}
-
-@include euiBreakpoint('m', 'l', 'xl') {
-  // sass-lint:disable-block no-important
-  .euiHeaderLinks__mobileList {
-    display: none !important;
-  }
-}
-
-@include euiBreakpoint('xs', 's') {
-  // sass-lint:disable-block no-important
-  .euiHeaderLinks__mobile {
-    display: block !important;
-  }
-
-  .euiHeaderLinks__list {
-    display: none;
+    margin: 0 $gutterSize;
   }
 }
