[EuiIcon, EuiButtonIcon] Improved contrast for named colors (#4049)
* Improved constrast for icons named colors

* Changelog

* Improved contrast only for EuiHealth named colors

* Fixing button icon color

* Icons colors with graphic contrast levels. Button icon colors with text contrast levels.

* CL and snapshots

* reverting euiHealth code to use euiIcon color prop

* Reverting euiHealth code

* Better CL

--- a/src/components/button/button_icon/_variables.scss
+++ b/src/components/button/button_icon/_variables.scss
@@ -1,11 +1,12 @@
 // Modifier naming and colors.
 $euiButtonIconTypes: (
-  danger: $euiColorDanger,
+  accent: $euiColorAccentText,
+  danger: $euiColorDangerText,
   disabled: $euiButtonColorDisabledText,
   ghost: $euiColorGhost,
-  primary: $euiColorPrimary,
+  primary: $euiColorPrimaryText,
   subdued: $euiTextSubduedColor,
-  success: $euiColorSuccess,
+  success: $euiColorSuccessText,
   text: $euiTextColor,
-  warning: $euiColorWarning,
+  warning: $euiColorWarningText,
 );
