--- a/src/components/card/checkable_card/_checkable_card.scss
+++ b/src/components/card/checkable_card/_checkable_card.scss
@@ -5,17 +5,15 @@
   overflow: hidden; // Hides background color inside panel rounded corners
 
   &:not(.euiCheckableCard-isDisabled) {
+    &.euiCheckableCard-isChecked {
+      border-color: $euiColorPrimary;
+    }
+
     &:focus-within {
       @include euiFocusRing;
     }
   }
 }
-
-.euiCheckableCard-isChecked {
-  border-color: $euiColorPrimary;
-}
-
-
 
 .euiCheckableCard__row {
   display: flex;
