[EuiIcon] Fix color prop for custom colors (#4104)
* Add fully mono support for EuiIcon custom color, change css property from fill to color

--- a/src/components/icon/_icon.scss
+++ b/src/components/icon/_icon.scss
@@ -43,7 +43,8 @@
 // App icon special cases for fully mono
 .euiIcon--text,
 .euiIcon--subdued,
-.euiIcon--primary {
+.euiIcon--primary,
+.euiIcon--customColor {
   &,
   .euiIcon__fillSecondary {
     fill: currentColor;
