--- a/src/components/button/_button.scss
+++ b/src/components/button/_button.scss
@@ -1,5 +1,5 @@
 // This file has lots of modifiers and is somewhat nesty by nature
-//sass-lint:disable nesting-depth
+// sass-lint:disable nesting-depth
 
 // Our base button
 .euiButton {
@@ -28,16 +28,16 @@
     @include euiSlightShadowHover;
   }
 
-  &:enabled {
+  &:not([class*='isDisabled']) {
     &:hover,
-    &:focus {
+    &:focus,
+    &:focus-within {
       background-color: transparentize($euiColorPrimary, .9);
     }
   }
 
-  &:disabled {
+  &.euiButton-isDisabled {
     @include euiButtonContentDisabled;
-
     color: $euiButtonColorDisabledText;
     border-color: $euiButtonColorDisabled;
 
@@ -48,16 +48,17 @@
       border-color: $euiButtonColorDisabled;
 
       &:hover,
-      &:focus {
+      &:focus,
+      &:focus-within {
         background-color: $euiButtonColorDisabled;
         border-color: $euiButtonColorDisabled;
       }
     }
 
     &:hover,
-    &:focus {
+    &:focus,
+    &:focus-within {
       @include euiSlightShadow;
-
       text-decoration: none;
     }
   }
@@ -88,16 +89,17 @@
 
       color: $fillTextColor;
 
-      &:enabled {
+      &:not([class*='isDisabled']) {
         &:hover,
-        &:focus {
+        &:focus,
+        &:focus-within {
           background-color: darken($color, 5%);
           border-color: darken($color, 5%);
         }
       }
     }
 
-    &:enabled {
+    &:not([class*='isDisabled']) {
       $shadowColor: $euiShadowColor;
       @if ($name == 'ghost') {
         $shadowColor: $euiColorInk;
@@ -109,23 +111,21 @@
       @include euiSlightShadow($shadowColor);
 
       &:hover,
-      &:focus {
+      &:focus,
+      &:focus-within {
         @include euiSlightShadowHover($shadowColor);
         background-color: transparentize($color, .9);
-
-        @if ($name == 'disabled') {
-          cursor: not-allowed;
-        }
       }
     }
   }
 }
 
 // Fix ghost/disabled look specifically
-.euiButton:disabled.euiButton--ghost {
+.euiButton.euiButton-isDisabled.euiButton--ghost {
   &,
   &:hover,
-  &:focus {
+  &:focus,
+  &:focus-within {
     @include euiSlightShadow($euiColorInk);
     color: $euiButtonColorGhostDisabled;
     border-color: $euiButtonColorGhostDisabled;
