--- a/src/themes/eui-amsterdam/overrides/_button.scss
+++ b/src/themes/eui-amsterdam/overrides/_button.scss
@@ -9,7 +9,7 @@
   // Added exclusion of the `ghost` type of button
   // so as not to override those specific styles from default theme
   // And the only style that needs to change is the non-filled version
-  &:disabled:not(.euiButton--ghost):not(.euiButton--fill) {
+  &.euiButton-isDisabled:not(.euiButton--ghost):not(.euiButton--fill) {
     $backgroundColorSimulated: mix($euiPageBackgroundColor, $euiButtonColorDisabled, 70%);
     background-color: transparentize($euiButtonColorDisabled, .7);
     color: makeHighContrastColor($euiButtonColorDisabled, $backgroundColorSimulated, 2);
@@ -34,7 +34,7 @@
       color: makeHighContrastColor($color, $backgroundColorSimulated);
     }
 
-    &.euiButton--fill:enabled {
+    &.euiButton--fill:not([class*='isDisabled']) {
       &:hover,
       &:focus {
         background-color: darken($color, 10%);
@@ -44,7 +44,7 @@
 }
 
 // Fix ghost/disabled look specifically
-.euiButton:disabled.euiButton--ghost:not(.euiButton--fill) {
+.euiButton.euiButton-isDisabled.euiButton--ghost:not(.euiButton--fill) {
   &,
   &:hover,
   &:focus {
