[EuiFilterGroup] and [EuiFilterButton] Fix styling for Amsterdam (#4151)

--- a/src/components/filter_group/_filter_group.scss
+++ b/src/components/filter_group/_filter_group.scss
@@ -3,7 +3,7 @@
   max-width: 100%;
   border-right: 1px solid $euiFormBorderColor;
   box-shadow: 0 1px 2px -1px transparentize($euiShadowColor, .8), 0 3px 3px -2px transparentize($euiShadowColor, .8);
-  overflow-x: auto;
+  overflow: hidden;
 
   > * {
     flex: 1 1 auto;
