--- a/src/components/code_editor/_code_editor.scss
+++ b/src/components/code_editor/_code_editor.scss
@@ -15,17 +15,16 @@
 .euiCodeEditorKeyboardHint {
   position: absolute;
   top: 0;
-  bottom: 0;
-  right: 0;
   left: 0;
   background: transparentize($euiColorGhost, .3);
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  text-align: center;
   opacity: 0;
   cursor: pointer;
+  height: 100%;
+  width: 100%;
 
   &:focus {
     opacity: 1;
