[EuiPopover] Adjustments for more padding options and Amsterdam (#4146)
* [EuiPopoverTitle] Remove uppercase
* [EuiPopover] Allowing panelPadding to adjust title as well
  - And fixing some instances, including removing it from EuiContextMenu for a custom element
* Added `paddingSize` to EuiPopoverTitle/Footer
  - And updated instances and tests

--- a/src/components/context_menu/_context_menu_panel.scss
+++ b/src/components/context_menu/_context_menu_panel.scss
@@ -35,12 +35,13 @@
 
 .euiContextMenuPanelTitle {
   @include euiPopoverTitle;
+  padding: $euiSizeM;
 
   width: 100%;
   text-align: left;
 
-  &:hover,
-  &:focus {
+  &:enabled:hover,
+  &:enabled:focus {
     text-decoration: underline;
   }
 }
