--- a/src/themes/eui-amsterdam/overrides/_index.scss
+++ b/src/themes/eui-amsterdam/overrides/_index.scss
@@ -3,6 +3,7 @@
 @import 'button_group';
 @import 'call_out';
 @import 'code';
+@import 'context_menu';
 @import 'filter_group';
 @import 'header';
 @import 'image';
