--- a/src/components/popover/_popover_title.scss
+++ b/src/components/popover/_popover_title.scss
@@ -1,15 +1,27 @@
 .euiPopoverTitle {
   @include euiPopoverTitle;
+}
 
-  // If the popover's containing panel has padding applied,
-  // ensure the title expands to cover that padding and
-  // take on the same amount of padding horizontally
+.euiPopoverTitle--paddingNone {
+  padding: 0;
+}
 
-  @each $modifier, $amount in $euiPanelPaddingModifiers {
-    .euiPopover__panel.euiPanel--#{$modifier} & {
+@each $modifier, $amount in $euiPanelPaddingModifiers {
+  .euiPopoverTitle--#{$modifier} {
+    padding: $amount;
+  }
+}
+
+// If the popover's containing panel has padding applied,
+// ensure the title expands to cover that padding and
+// take on the same amount of padding horizontally
+
+@each $modifier, $amount in $euiPanelPaddingModifiers {
+  .euiPopover__panel.euiPanel--#{$modifier} .euiPopoverTitle {
+    margin: ($amount * -1) ($amount * -1) $amount;
+
+    &:not([class*='euiPopoverTitle--padding']) {
       padding: $euiSizeM $amount;
-      margin: ($amount * -1) ($amount * -1) $amount;
     }
   }
-
 }
