Adds display prop to EuiTooltip for common display block needs (#4148)
Adds a display prop to `EuiToolTip` for the common need of making the anchors block level elements.

--- a/src/components/tool_tip/_tool_tip.scss
+++ b/src/components/tool_tip/_tool_tip.scss
@@ -65,6 +65,10 @@
   *[disabled] {
     pointer-events: none;
   }
+
+  &.euiToolTipAnchor--displayBlock {
+    display: block;
+  }
 }
 
 // Keyframes to animate in the tooltip.
