[EuiButtonGroup] Remove unnecessary shadow (#4186)
* Removing EuiButtonGroup unnecessary shadow

* Adding CL number

* Moving CL entry to master

--- a/src/components/button/button_group/_button_group.scss
+++ b/src/components/button/button_group/_button_group.scss
@@ -22,20 +22,10 @@
   display: flex;
   overflow: hidden;
   transition: all $euiAnimSpeedNormal ease-in-out;
-
-  &:hover,
-  &:active,
-  &:focus-within {
-    @include euiSlightShadowHover;
-  }
 }
 
 .euiButtonGroup--isDisabled .euiButtonGroup__buttons {
-  &:hover,
-  &:active,
-  &:focus-within {
-    box-shadow: none !important; // sass-lint:disable-line no-important
-  }
+  box-shadow: none;
 }
 
 .euiButtonGroup--compressed {
