[EuiButtonGroup] Fix position for EuiScreenReaderOnly (#4189)
* [EuiButtonGroup] Fix position for EuiScreenReaderOnly

* cl

* Update src/components/button/button_group/_button_group.scss

Co-authored-by: Greg Thompson <thompson.glowe@gmail.com>

Co-authored-by: Greg Thompson <thompson.glowe@gmail.com>

--- a/src/components/button/button_group/_button_group.scss
+++ b/src/components/button/button_group/_button_group.scss
@@ -1,6 +1,7 @@
 .euiButtonGroup {
   display: inline-block;
   max-width: 100%;
+  position: relative; // Ensures the EuiScreenReaderOnly component is positioned relative to this component
 }
 
 .euiButtonGroup--fullWidth {
